--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -34,6 +34,12 @@
                                 <p>Process Conversation Data</p>
                             </a>
                         </li>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="{% url 'project-add' %}">
+                                <i class="material-icons">image</i>
+                                <p>Add Project</p>
+                            </a>
+                        </li>
                     </div>
                 </div>
                 <div class="nav">
